# pip-requirements-parser

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.rst  azure-pipelines.yml  package_legacy_version.ABOUT  requirements.txt  setup.cfg
docs/source/: conf.py
etc/: README.rst  git-filter-repo-pip.sh  git-rename-merge.sh
etc/scripts/: utils_pip_compatibility_tags.py
src/: packaging_legacy_version.py  packaging_legacy_version_structures.py  packvers_legacy_version.py  packvers_legacy_version.py.ABOUT  pip1.py  pip10.py  pip11.py  pip12.py  pip14.py  pip15.py  pip17.py  pip2.py  pip4.py  pip5.py  pip6.py  pip7.py  pip8.py  pip_requirements.py  pip_requirements_parser.py
src/pip/_internal/: exceptions.py
src/pip/_internal/models/: format_control.py  index.py  link.py
src/pip/_internal/req/: constructors.py  req_install.py
src/pip/_internal/utils/: filetypes.py  hashes.py  misc.py  models.py  urls.py
src/pip/_internal/vcs/: versioncontrol.py
src/pip_requirements_parser/: packaging_legacy_version.py
tests/: conftest.py  test_dparse.py  test_dparse.py.LICENSE  test_packaging_legacy_version.py  test_packaging_legacy_version.py.ABOUT  test_packvers_legacy_version.py  test_pip_api_parse_requirements.py  test_requirements_detector_detection.py  test_requirements_detector_parsing.py  test_requirements_parser.py
tests/lib/: __init__.py  path.py
tests/pip_req_parse_tests/: test_requirements_file.py
tests/pip_req_parse_tests/data/more-requirements/: Alzon-senlin-requirements.txt-expected.json  CyrilPeponnet-Unify-whisper-requirements.txt  CyrilPeponnet-Unify-whisper-requirements.txt-expected.dumps  Elchi3-kuma-requirements-dev.txt-expected.dumps  Elchi3-kuma-requirements-dev.txt-expected.json  TechAtNYU-overlord-requirements.txt-expected.dumps  TechAtNYU-overlord-requirements.txt-expected.json  alexandermendes-pybossa-github-builder-requirements.txt-expected.json  andymckay-olympia-requirements-prod.txt  andymckay-olympia-requirements-prod.txt-expected.dumps  bigzachattack-dockerspawner-requirements.txt-expected.dumps  bigzachattack-dockerspawner-requirements.txt-expected.json  buildtimetrend-python-client-requirements-native.txt-expected.json  freedomsponsors-www.freedomsponsors.org-requirements.txt-expected.json  freeekanayaka-systemfixtures-requirements.txt  freeekanayaka-systemfixtures-requirements.txt-expected.dumps  freeekanayaka-systemfixtures-requirements.txt-expected.json  indodutch-sim-city-webservice-requirements.txt  nikdoof-test-auth-requirements.txt  (+19 more)
tests/pip_req_parse_tests/lib/: __init__.py  path.py
tests/pip_req_parse_tests/unit/: compatibility_tags.py  misc.py  test_link.py  test_models_wheel.py  test_req.py  test_req_file.py  test_req_install.py  test_urls.py  test_utils.py  test_utils_compatibility_tags.py  test_utils_temp_dir.py
tests/pip_requirements_parser_tests/: test_requirements_file.py
tests/pip_requirements_parser_tests/lib/: __init__.py
tests/pip_requirements_parser_tests/unit/: test_link.py  test_models_wheel.py  test_req.py  test_req_file.py  test_req_install.py  test_urls.py  test_utils.py  test_utils_temp_dir.py
tests/requirements_parser_reqfiles/: blank_1.txt-expected.json  comment_1.txt-expected.json  comment_2.txt-expected.json  crateio_requirements.txt-expected.json  editable_1.txt-expected.json  editable_2.txt-expected.json  extras_1.txt-expected.json  fail_1.txt-expected.json  fail_2.txt-expected.json  file_1.txt-expected.json  file_2.txt  file_2.txt-expected.json  illustrative_requirements.txt-expected.json  recursive_1.txt-expected.json  recursive_2.txt-expected.json  rtfd_deploy_requirements.txt-expected.json  rtfd_requirements.txt-expected.json  simple_1.txt-expected.json  specs_1.txt-expected.json  subdirectory.txt-expected.json  underscores.txt-expected.json  uri.txt-expected.json  vcs_bzr.txt-expected.json  vcs_git.txt-expected.json  vcs_git_extras_require.txt-expected.json  vcs_hg.txt-expected.json  vcs_svn.txt-expected.json
tests/unit/: compatibility_tags.py  misc.py  temp_dir.py  test_link.py  test_models_wheel.py  test_req.py  test_req_file.py  test_req_install.py  test_urls.py  test_utils.py  test_utils_compatibility_tags.py  test_utils_temp_dir.py
(+130 files in other folders)
