[metadata]
license_files =
    mit.LICENSE
    AUTHORS.rst
    CHANGELOG.rst
    README.rst
name = pip-requirements
author = The pip authors, nexB. Inc. and others
author_email = info@aboutcode.org
license = MIT

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = pip requirements - the only correct pip requirements parsing library: a requirements parser using pip's own code.
long_description = file:README.rst
url = https://github.com/nexB/pip-requirements
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
    utilities pip requirements parser dependencies pypi

[options]
package_dir=
    =src
packages=find:
include_package_data = true
py_modules =
    pip_requirements
zip_safe = false
install_requires =
    packaging
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
    # upstream
    pytest >= 6
    pytest-xdist >= 2
docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1
