[metadata]
name = pip-requirements-parser
license = MIT

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = pip requirements parser - a mostly correct pip requirements parsing library because it uses pip's own code.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/aboutcode-org/pip-requirements-parser

author = The pip authors, nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities pip requirements parser dependencies pypi

license_files =
    mit.LICENSE
    AUTHORS.rst
    CHANGELOG.rst
    README.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
py_modules =
    pip_requirements_parser
    packaging_legacy_version
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =
    packaging
    pyparsing


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    isort

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

